--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     	<div class="col-md-6  align-item-center ">
     		<div class="slide_cont">
     			<h2 class="c_heading">Developer </h2>
-    		    <p class="c_p">I design and code beautifully simple things, and I love what I do.</p>
+    		    <p class="c_p">Im Govind punchal design and code beautifully simple things, and I love what I do.</p>
     		    <a href="#" class="readmore">Read more</a>
     		</div>
     		
